# titanai

./: .env.template  .gitignore  API.md  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION.md  LICENSE  README.md  README_CN.md  docker-compose.yml  package-lock.json  package.json
app/: constant.ts  layout.tsx
app/api/config/: route.ts
app/client/: api.ts
app/components/: artifacts.tsx  emoji.tsx  exporter.tsx  mcp-market.tsx  settings.tsx  sidebar.tsx
app/config/: server.ts
app/locales/: ar.ts  bn.ts  cn.ts  cs.ts  de.ts  en.ts  es.ts  fr.ts  id.ts  it.ts  jp.ts  ko.ts  no.ts  pt.ts  ru.ts  sk.ts  tr.ts  tw.ts  vi.ts
app/mcp/: client.ts  logger.ts  types.ts
app/store/: access.ts  update.ts
app/utils/: model.ts
docs/: faq-cn.md  faq-en.md  faq-es.md  faq-ja.md  faq-ko.md  user-manual-cn.md  vercel-cn.md  vercel-ko.md
npm/: package.json  tsconfig.json
npm/src/: index.ts
npm/tests/: index.test.ts
public/: plugins.json  site.webmanifest
python/: pyproject.toml
python/src/multiplatform_sdk/: __init__.py  multiplatform_sdk.py
python/src/titanai/: __init__.py  core.py
python/tests/: test_sdk.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: download_assets.py  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
