[package]
name = "titan-ai"
version = "0.1.0"
edition = "2021"
description = "TitanAI SDK - Multi-platform AI toolkit"
license = "MIT"
repository = "https://github.com/titandao/titanai"
keywords = ["ai", "sdk", "titan", "blockchain"]
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
